--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //For accordion view
+    implementation 'com.riyagayasen.android:easyaccordion:1.0.3'
     //implementation  'com.crashlytics.sdk.android:crashlytics:2.10.1'
 }
