--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         <activity android:name=".profileActivity_student"></activity>
         <activity android:name=".profileActivity" />
         <activity android:name=".SignupActivity" />
+        <activity android:name=".TutorPostCreate" />
+        <activity android:name=".Student_View" />
+        <activity android:name=".Tutor_View" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
